--- a/src/panels/style.css
+++ b/src/panels/style.css
@@ -1,3 +1,12 @@
+html, body, #app {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
 :root {
     background-color: #242424;
     color: rgb(255 255 255 / 87%);
@@ -21,13 +30,7 @@ a:hover {
     color: #535bf2;
 }
 
-body {
-    display: flex;
-    min-width: 320px;
-    min-height: 100vh;
-    margin: 0;
-    place-items: center;
-}
+
 
 h1 {
     font-size: 3.2em;
@@ -59,12 +62,7 @@ button:focus-visible {
     padding: 2em;
 }
 
-#app {
-    max-width: 1280px;
-    padding: 2rem;
-    margin: 0 auto;
-    text-align: center;
-}
+
 
 /* @media (prefers-color-scheme: light) {
     :root {
